kubernetes/springboot/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot
  namespace: devops
  labels:
    app: springboot
    service: springboot
spec:
  selector:
    app: springboot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
